@@ -9,7 +9,9 @@ qtbase-opensource-src (5.14.1+dfsg-1) UNRELEASED; urgency=medium
     - postgresql_12.diff
     - uic_global_includes.diff
     - riscv.diff
-  * Refresh gnukfreebsd.diff.
+  * Refresh patches:
+    - gnukfreebsd.diff
+    - gnukfreebsd_linker_warnings.diff
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 28 Jan 2020 21:51:33 -0300
 
